# MasterThesis

./: .gitignore  CLAUDE.md  Instructions.md  LICENSE  README.md  environment.yml  inference.py  prepare_inputs.py  prepare_pdbbind_from_rcsb.py  pyproject.toml
analysis/: generate_failed_esm_embeddings.py  pb_preprocess_chaincut.py  run_group_eval.py  run_group_mira.py  run_pb_eval_posebusters.py  run_posebusters.py  run_rmsd_eval.py  tarp_by_protein_group.py
app/: main.py
data/splits/: test_small_split.txt
data/splits/chunks/: chunk_1.txt
data/splits/pb_chunks/: chunk_4.txt
datasets/: esm_embedding_preparation.py
diffdock/: .gitignore  CLAUDE.md  default_inference_args.yaml  environment.yml  evaluate.py  inference.py
diffdock/analysis/: gnina_rescore_poses.py  pb_check_poses.py  run_group_eval.py  run_group_mira.py  run_pb_eval_posebusters.py  run_posebusters.py  tarp_by_protein_group.py
diffdock/configs/: sensitivity_inference_args.yaml  sensitivity_inference_args_ode.yaml
diffdock/data/splits/: pb_chaincut_test50.txt  pb_failed_eval.txt  pb_sensitivity_failed12.txt  (+3 more)
diffdock/notebooks/: check_implementation_change.ipynb  group_tarp_mira.ipynb
diffdock/utils/: distribution_analysis.py  group_eval.py  merge_top1_runs.py  mira_eval.py  rmsd_eval.py  tarp_eval.py
docs/: molcalib.md
envs/: README.md  analysis.yml
eval_diffdock/: __init__.py  distribution_analysis.py  group_mira_runner.py  group_tarp_runner.py  loader.py  mira_runner.py  pb_eval.py  rmsd_runner.py  tarp_runner.py
eval_diffdock/preprocess/: collect_gnina_rescoring.py  copy_sde20_complexes.py  gnina_rescore_poses.py  merge_chunk_caches.py  merge_top1_runs.py  pb_check_poses.py  pb_reindex_chaincut_esm.py  pb_rmsd_from_inference.py  update_pb_complex_names.py
eval_diffdock/scripts/: compare_rmsd_inf_env.py  merge_eval_chunks.py  run_group_eval.py  run_impl_check.py  run_mira_pb_benchmark.py  run_mira_pdbbind.py  run_pb_eval_pdbbind.py  run_pb_eval_posebusters.py  run_posebusters.py  run_rmsd_eval.py  run_tarp_K10_pb_benchmark.py  run_tarp_mira_generic.py  run_tarp_mira_pb_benchmark.py  run_tarp_mira_pdbbind.py  run_tarp_rmsd_pb_benchmark.py  run_tarp_rmsd_pdbbind.py  sensitivity_ode_nsteps_eval.py  tarp_by_protein_group.py
eval_sigmadock/: __init__.py  loader.py
eval_sigmadock/scripts/: build_pb_json.py  eval_rmsd.py  gnina_rescore.py  group_eval.py  merge_seeds.py  run_mira_tarp.py
molcalib/: __init__.py  distances.py  io.py  mira.py  prior.py  style.py  tarp.py
notebooks/: 06_mira_tarp_analysis.ipynb  check_implementation_change.ipynb  comparison_diffdock_sigmadock.ipynb  confidence_calibration_analysis.ipynb  distribution_analysis.ipynb  generate_esm_embeddings.ipynb  group_tarp_mira.ipynb  mira_tarp_sigmadock.ipynb  pb_filtering_analysis.ipynb  plot_inference_results.ipynb  posebusters_calibration.ipynb  sensitivity_n_steps.ipynb  tarp_analysis.ipynb
notebooks/dummy_data/: README.md  build_inference_datafront_csv.py
scripts/: eval_rmsd.py  group_eval.py  mira_tarp_eval.py  sensitivity_ode_nsteps_eval.py
sigmadock/: .pre-commit-config.yaml  LICENSE  README.md  install.sh  pyproject.toml
sigmadock/conf/: config.yaml  datasets.yaml
sigmadock/notebooks/: 01_visualize_data_and_pocket.ipynb  02_alignment.ipynb  03_fragmentation.ipynb  04_diffusion.ipynb  05_crossdock_sampling.ipynb  06_mira_tarp_analysis.ipynb  README.md
sigmadock/scripts/: __init__.py  eval_rmsd.py  gnina_rescore.py  mira_tarp_eval.py  sample.py  train.py
sigmadock/slurm/: README.md  env_setup.sh  sample.sh  train.sh
slurm/: README.md
slurm/diffdock/: diffdock_eval_testset.sh  diffdock_mira_symrmsd.sh  diffdock_posebusters.sh  diffdock_tarp_rmsd.sh
src/sigmadock/: datafronts.py  sampling_setup.py
utils/: distribution_analysis.py  group_eval.py  group_mira_eval.py  inference_utils.py  merge_chunk_caches.py  merge_top1_runs.py  mira_eval.py  posebusters_eval.py  tarp_eval.py  visualise.py
(+125 files in other folders)
