[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "molcalib"
version = "0.1.0"
description = "MIRA and TARP calibration diagnostics for molecular docking"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "rdkit",
    "networkx",
    "spyrmsd",
    "prody",
    "torch",
]

[tool.setuptools.packages.find]
include = ["molcalib*", "eval_sigmadock*", "eval_diffdock*"]
